cambios de nombre

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=
 , initial-scale=1.0">
     <title>diario cuyo</title>
-    <link rel="stylesheet" href="./stylespaula.css/pau.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
      <head>
